--- a/res/style/editor-stylesheet.qss
+++ b/res/style/editor-stylesheet.qss
@@ -1,29 +1,30 @@
 #window
 {
-	background:pink;
+	background-color:rgb(85,79,79);
 }
 
 #toolBar
 {
-	background:blue;
+	background-color:rgb(45,40,40);
 }
 
 #rightPanel
 {
-	background:red;
+	background-color:rgb(240,240,240);
+	border-left:1px solid black;
 }
 
 #topBar
 {
-	background:yellow;
+	background-color:rgb(64,60,60);
 }
 
 #botBar
 {
-	background:green;
+	background-color:rgb(35,30,30);
 }
 
 #centralWidget
 {
-	background:grey;
+	background-color:rgb(225,219,219);
 }
