--- a/src/Editor/layersettings.ui
+++ b/src/Editor/layersettings.ui
@@ -52,30 +52,10 @@
     <string>Layer Name:</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="heightedit">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>90</y>
-     <width>51</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="widthedit">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>90</y>
-     <width>51</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QLabel" name="layerwidth">
    <property name="geometry">
     <rect>
-     <x>80</x>
+     <x>90</x>
      <y>70</y>
      <width>32</width>
      <height>13</height>
@@ -114,7 +94,7 @@
   <widget class="QLabel" name="ylabel">
    <property name="geometry">
     <rect>
-     <x>80</x>
+     <x>100</x>
      <y>120</y>
      <width>31</width>
      <height>16</height>
@@ -122,26 +102,6 @@
    </property>
    <property name="text">
     <string>Y:</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="xedit">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>140</y>
-     <width>51</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="yedit">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>140</y>
-     <width>51</width>
-     <height>21</height>
-    </rect>
    </property>
   </widget>
   <widget class="QCheckBox" name="gridcheckbox">
@@ -160,7 +120,7 @@
   <widget class="QLabel" name="depthindex">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>30</x>
      <y>160</y>
      <width>121</width>
      <height>31</height>
@@ -168,16 +128,6 @@
    </property>
    <property name="text">
     <string>Depthindex of Layer:</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="depthindexedit">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>190</y>
-     <width>51</width>
-     <height>21</height>
-    </rect>
    </property>
   </widget>
   <widget class="QComboBox" name="gridcolor">
@@ -203,10 +153,58 @@
     <string>Grid Color:</string>
    </property>
   </widget>
+  <widget class="QSpinBox" name="heightedit">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>90</y>
+     <width>61</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="widthedit">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>90</y>
+     <width>61</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="xedit">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>140</y>
+     <width>61</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="yedit">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>140</y>
+     <width>61</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QDoubleSpinBox" name="depthindexedit">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>190</y>
+     <width>62</width>
+     <height>22</height>
+    </rect>
+   </property>
+  </widget>
  </widget>
  <tabstops>
-  <tabstop>heightedit</tabstop>
-  <tabstop>widthedit</tabstop>
   <tabstop>nameedit</tabstop>
   <tabstop>buttonBox</tabstop>
  </tabstops>
