--- a/src/Editor/layersettings.ui
+++ b/src/Editor/layersettings.ui
@@ -6,57 +6,41 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>268</width>
+    <height>292</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Layer Settings</string>
   </property>
-  <widget class="QDialogButtonBox" name="buttonBox">
+  <widget class="QLineEdit" name="nameEdit">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>240</y>
-     <width>341</width>
-     <height>32</height>
-    </rect>
-   </property>
-   <property name="orientation">
-    <enum>Qt::Horizontal</enum>
-   </property>
-   <property name="standardButtons">
-    <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="nameedit">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>40</y>
-     <width>111</width>
+     <x>50</x>
+     <y>10</y>
+     <width>211</width>
      <height>21</height>
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" name="layername">
+  <widget class="QLabel" name="nameLabel">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>20</y>
+     <x>10</x>
+     <y>10</y>
      <width>81</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>Layer Name:</string>
+    <string>Name:</string>
    </property>
   </widget>
-  <widget class="QLabel" name="layerwidth">
+  <widget class="QLabel" name="widthLabel">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>70</y>
+     <x>10</x>
+     <y>100</y>
      <width>32</width>
      <height>13</height>
     </rect>
@@ -65,11 +49,11 @@
     <string>Width:</string>
    </property>
   </widget>
-  <widget class="QLabel" name="layerheight">
+  <widget class="QLabel" name="heightLabel">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>70</y>
+     <x>80</x>
+     <y>100</y>
      <width>51</width>
      <height>16</height>
     </rect>
@@ -81,8 +65,8 @@
   <widget class="QLabel" name="xlabel">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>120</y>
+     <x>10</x>
+     <y>150</y>
      <width>31</width>
      <height>16</height>
     </rect>
@@ -94,8 +78,8 @@
   <widget class="QLabel" name="ylabel">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>120</y>
+     <x>80</x>
+     <y>150</y>
      <width>31</width>
      <height>16</height>
     </rect>
@@ -104,47 +88,100 @@
     <string>Y:</string>
    </property>
   </widget>
-  <widget class="QCheckBox" name="gridcheckbox">
+  <widget class="QCheckBox" name="gridCheckBox">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>230</y>
-     <width>101</width>
+     <x>10</x>
+     <y>40</y>
+     <width>121</width>
      <height>41</height>
     </rect>
    </property>
    <property name="text">
-    <string>Grid Enabled?</string>
+    <string>Enable / Disable Grid</string>
    </property>
   </widget>
-  <widget class="QLabel" name="depthindex">
+  <widget class="QLabel" name="depthIndexLabel">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>160</y>
+     <x>10</x>
+     <y>214</y>
      <width>121</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>Depthindex of Layer:</string>
+    <string>Depth Index:</string>
    </property>
   </widget>
-  <widget class="QComboBox" name="gridcolor">
+  <widget class="QComboBox" name="gridColorComboBox">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>40</y>
+     <x>180</x>
+     <y>70</y>
      <width>81</width>
      <height>21</height>
     </rect>
    </property>
+   <property name="currentText">
+    <string>Black</string>
+   </property>
+   <item>
+    <property name="text">
+     <string>Black</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>Red</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>Orange</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>Yellow</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>Green</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>Cyan</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>Blue</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>Purple</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>Pink</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>White</string>
+    </property>
+   </item>
   </widget>
-  <widget class="QLabel" name="gridcolorlabel">
+  <widget class="QLabel" name="gridColorLabel">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>20</y>
+     <x>180</x>
+     <y>50</y>
      <width>61</width>
      <height>16</height>
     </rect>
@@ -153,94 +190,100 @@
     <string>Grid Color:</string>
    </property>
   </widget>
-  <widget class="QSpinBox" name="heightedit">
+  <widget class="QSpinBox" name="heightSpinBox">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>90</y>
+     <y>120</y>
      <width>61</width>
      <height>21</height>
     </rect>
    </property>
+   <property name="maximum">
+    <number>999999999</number>
+   </property>
   </widget>
-  <widget class="QSpinBox" name="widthedit">
+  <widget class="QSpinBox" name="widthSpinBox">
    <property name="geometry">
     <rect>
      <x>80</x>
-     <y>90</y>
+     <y>120</y>
      <width>61</width>
      <height>21</height>
     </rect>
    </property>
+   <property name="maximum">
+    <number>999999999</number>
+   </property>
   </widget>
-  <widget class="QSpinBox" name="xedit">
+  <widget class="QSpinBox" name="xSpinBox">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>140</y>
+     <y>170</y>
      <width>61</width>
      <height>21</height>
     </rect>
    </property>
+   <property name="minimum">
+    <number>-999999999</number>
+   </property>
+   <property name="maximum">
+    <number>999999999</number>
+   </property>
   </widget>
-  <widget class="QSpinBox" name="yedit">
+  <widget class="QSpinBox" name="ySpinBox">
    <property name="geometry">
     <rect>
      <x>80</x>
-     <y>140</y>
+     <y>170</y>
      <width>61</width>
      <height>21</height>
     </rect>
    </property>
+   <property name="minimum">
+    <number>-999999999</number>
+   </property>
+   <property name="maximum">
+    <number>999999999</number>
+   </property>
   </widget>
-  <widget class="QDoubleSpinBox" name="depthindexedit">
+  <widget class="QDoubleSpinBox" name="depthIndexSpinBox">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>190</y>
+     <x>80</x>
+     <y>220</y>
      <width>62</width>
      <height>22</height>
     </rect>
    </property>
+   <property name="minimum">
+    <double>-50.000000000000000</double>
+   </property>
+   <property name="maximum">
+    <double>50.000000000000000</double>
+   </property>
+   <property name="value">
+    <double>1.000000000000000</double>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="OKButton">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>260</y>
+     <width>81</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>OK</string>
+   </property>
   </widget>
  </widget>
  <tabstops>
-  <tabstop>nameedit</tabstop>
-  <tabstop>buttonBox</tabstop>
+  <tabstop>nameEdit</tabstop>
  </tabstops>
  <resources/>
- <connections>
-  <connection>
-   <sender>buttonBox</sender>
-   <signal>accepted()</signal>
-   <receiver>LayerSettings</receiver>
-   <slot>accept()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>248</x>
-     <y>254</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>157</x>
-     <y>274</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>buttonBox</sender>
-   <signal>rejected()</signal>
-   <receiver>LayerSettings</receiver>
-   <slot>reject()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>316</x>
-     <y>260</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>286</x>
-     <y>274</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
