--- a/src/Editor/layersettings.ui
+++ b/src/Editor/layersettings.ui
@@ -13,286 +13,185 @@
   <property name="windowTitle">
    <string>Layer Settings</string>
   </property>
-  <widget class="QLineEdit" name="nameEdit">
-   <property name="geometry">
-    <rect>
-     <x>50</x>
-     <y>10</y>
-     <width>211</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="nameLabel">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>81</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Name:</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="widthLabel">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>100</y>
-     <width>32</width>
-     <height>13</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Width:</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="heightLabel">
-   <property name="geometry">
-    <rect>
-     <x>80</x>
-     <y>100</y>
-     <width>51</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Height:</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="xlabel">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>150</y>
-     <width>31</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>X:</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="ylabel">
-   <property name="geometry">
-    <rect>
-     <x>80</x>
-     <y>150</y>
-     <width>31</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Y:</string>
-   </property>
-  </widget>
-  <widget class="QCheckBox" name="gridCheckBox">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>40</y>
-     <width>121</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Enable / Disable Grid</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="depthIndexLabel">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>214</y>
-     <width>121</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Depth Index:</string>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="gridColorComboBox">
-   <property name="geometry">
-    <rect>
-     <x>180</x>
-     <y>70</y>
-     <width>81</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="currentText">
-    <string>Black</string>
-   </property>
-   <item>
-    <property name="text">
-     <string>Black</string>
-    </property>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0">
+    <widget class="QLabel" name="nameLabel">
+     <property name="text">
+      <string>Name:</string>
+     </property>
+    </widget>
    </item>
-   <item>
-    <property name="text">
-     <string>Red</string>
-    </property>
+   <item row="0" column="1" colspan="3">
+    <widget class="QLineEdit" name="nameEdit"/>
    </item>
-   <item>
-    <property name="text">
-     <string>Orange</string>
-    </property>
+   <item row="1" column="0" rowspan="2" colspan="3">
+    <widget class="QCheckBox" name="gridCheckBox">
+     <property name="text">
+      <string>Enable / Disable Grid</string>
+     </property>
+    </widget>
    </item>
-   <item>
-    <property name="text">
-     <string>Yellow</string>
-    </property>
+   <item row="1" column="3">
+    <widget class="QLabel" name="gridColorLabel">
+     <property name="text">
+      <string>Grid Color:</string>
+     </property>
+    </widget>
    </item>
-   <item>
-    <property name="text">
-     <string>Green</string>
-    </property>
+   <item row="2" column="3">
+    <widget class="QComboBox" name="gridColorComboBox">
+     <property name="currentText">
+      <string>Black</string>
+     </property>
+     <item>
+      <property name="text">
+       <string>Black</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Red</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Orange</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Yellow</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Green</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Cyan</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Blue</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Purple</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Pink</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>White</string>
+      </property>
+     </item>
+    </widget>
    </item>
-   <item>
-    <property name="text">
-     <string>Cyan</string>
-    </property>
+   <item row="3" column="0">
+    <widget class="QLabel" name="widthLabel">
+     <property name="text">
+      <string>Width:</string>
+     </property>
+    </widget>
    </item>
-   <item>
-    <property name="text">
-     <string>Blue</string>
-    </property>
+   <item row="3" column="2">
+    <widget class="QLabel" name="heightLabel">
+     <property name="text">
+      <string>Height:</string>
+     </property>
+    </widget>
    </item>
-   <item>
-    <property name="text">
-     <string>Purple</string>
-    </property>
+   <item row="4" column="0" colspan="2">
+    <widget class="QSpinBox" name="heightSpinBox">
+     <property name="maximum">
+      <number>999999999</number>
+     </property>
+    </widget>
    </item>
-   <item>
-    <property name="text">
-     <string>Pink</string>
-    </property>
+   <item row="4" column="2">
+    <widget class="QSpinBox" name="widthSpinBox">
+     <property name="maximum">
+      <number>999999999</number>
+     </property>
+    </widget>
    </item>
-   <item>
-    <property name="text">
-     <string>White</string>
-    </property>
+   <item row="4" column="3">
+    <widget class="QPushButton" name="clearlayer">
+     <property name="text">
+      <string>Clear Layer</string>
+     </property>
+    </widget>
    </item>
-  </widget>
-  <widget class="QLabel" name="gridColorLabel">
-   <property name="geometry">
-    <rect>
-     <x>180</x>
-     <y>50</y>
-     <width>61</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Grid Color:</string>
-   </property>
-  </widget>
-  <widget class="QSpinBox" name="heightSpinBox">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>120</y>
-     <width>61</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="maximum">
-    <number>999999999</number>
-   </property>
-  </widget>
-  <widget class="QSpinBox" name="widthSpinBox">
-   <property name="geometry">
-    <rect>
-     <x>80</x>
-     <y>120</y>
-     <width>61</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="maximum">
-    <number>999999999</number>
-   </property>
-  </widget>
-  <widget class="QSpinBox" name="xSpinBox">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>170</y>
-     <width>61</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="minimum">
-    <number>-999999999</number>
-   </property>
-   <property name="maximum">
-    <number>999999999</number>
-   </property>
-  </widget>
-  <widget class="QSpinBox" name="ySpinBox">
-   <property name="geometry">
-    <rect>
-     <x>80</x>
-     <y>170</y>
-     <width>61</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="minimum">
-    <number>-999999999</number>
-   </property>
-   <property name="maximum">
-    <number>999999999</number>
-   </property>
-  </widget>
-  <widget class="QDoubleSpinBox" name="depthIndexSpinBox">
-   <property name="geometry">
-    <rect>
-     <x>80</x>
-     <y>220</y>
-     <width>62</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <property name="minimum">
-    <double>-50.000000000000000</double>
-   </property>
-   <property name="maximum">
-    <double>50.000000000000000</double>
-   </property>
-   <property name="value">
-    <double>1.000000000000000</double>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="OKButton">
-   <property name="geometry">
-    <rect>
-     <x>180</x>
-     <y>260</y>
-     <width>81</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>OK</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="clearlayer">
-   <property name="geometry">
-    <rect>
-     <x>180</x>
-     <y>120</y>
-     <width>81</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Clear Layer</string>
-   </property>
-  </widget>
+   <item row="5" column="0">
+    <widget class="QLabel" name="xlabel">
+     <property name="text">
+      <string>X:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="2">
+    <widget class="QLabel" name="ylabel">
+     <property name="text">
+      <string>Y:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="0" colspan="2">
+    <widget class="QSpinBox" name="xSpinBox">
+     <property name="minimum">
+      <number>-999999999</number>
+     </property>
+     <property name="maximum">
+      <number>999999999</number>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="2">
+    <widget class="QSpinBox" name="ySpinBox">
+     <property name="minimum">
+      <number>-999999999</number>
+     </property>
+     <property name="maximum">
+      <number>999999999</number>
+     </property>
+    </widget>
+   </item>
+   <item row="7" column="0" rowspan="2" colspan="3">
+    <widget class="QLabel" name="depthIndexLabel">
+     <property name="text">
+      <string>Depth Index:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="8" column="2">
+    <widget class="QDoubleSpinBox" name="depthIndexSpinBox">
+     <property name="minimum">
+      <double>-50.000000000000000</double>
+     </property>
+     <property name="maximum">
+      <double>50.000000000000000</double>
+     </property>
+     <property name="value">
+      <double>1.000000000000000</double>
+     </property>
+    </widget>
+   </item>
+   <item row="9" column="3">
+    <widget class="QPushButton" name="OKButton">
+     <property name="text">
+      <string>OK</string>
+     </property>
+    </widget>
+   </item>
+  </layout>
  </widget>
  <tabstops>
   <tabstop>nameEdit</tabstop>
