A new bunch of little features
Changed layer widget colors
Removed Hand tool right click bug +smoothness, now works when SPACE
pressed
Improved Zoom tool, now when CTRL pressed
Added global controls to enable / disable grid display and layer
visible, shortcuts on CTRL+G and CTRL+V
Fixed a little Grid issue in tileMap

--- a/res/style/editor-stylesheet.qss
+++ b/res/style/editor-stylesheet.qss
@@ -96,16 +96,17 @@
 
 #button
 {
-	background-color:rgba(255,255,255,0.25);
+	background-color:transparent;
+	color:white;
 	border:none;
 }
 
 #button:hover
 {
-	background-color:rgb(50, 170, 240);
+	background-color:rgba(255, 255, 255,0.25);
 }
 
 #button:pressed
 {
-	background-color:rgb(50, 80, 170);
+	background-color:rgba(0, 0, 0,0.25);
 }
