--- a/src/Editor/layersettings.ui
+++ b/src/Editor/layersettings.ui
@@ -117,6 +117,9 @@
        <property name="maximum">
         <double>50.000000000000000</double>
        </property>
+       <property name="singleStep">
+        <double>0.050000000000000</double>
+       </property>
        <property name="value">
         <double>1.000000000000000</double>
        </property>
