--- a/res/style/editor-stylesheet.qss
+++ b/res/style/editor-stylesheet.qss
@@ -110,3 +110,19 @@
 {
 	background-color:rgba(0, 0, 0,0.25);
 }
+
+#menuButton
+{
+	background-color:rgb(127,127,127);
+	border:none;
+}
+
+#menuButton:hover
+{
+	background-color:rgb(0, 170, 240);
+}
+
+#menuButton:pressed
+{
+	background-color:rgb(0, 80, 170);
+}
